# src/main/java/com/bookmanagement/dto/book/ExternalBookSearchType.java
@@ -1,0 +1,8 @@
+package com.bookmanagement.dto.book;
+
+public enum ExternalBookSearchType {
+    KEYWORD,
+    TITLE,
+    AUTHOR,
+    ISBN
+}
